--- a/client/src/components/FourQuadrants/FourQuadrants.css
+++ b/client/src/components/FourQuadrants/FourQuadrants.css
@@ -2,6 +2,10 @@
 .main-grid{
      display: grid;
      grid-template-columns: 1fr 1fr;
-     gap: 20px;
-     padding: 20px
-    }
+     gap: 10px;
+     padding: 20px;
+}
+.gird-content{
+     text-align: center;
+     margin-top: 2px;
+}
