--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -16,11 +16,10 @@
   margin: 0 12px;
   font-weight: 500;
   font-size: 1.2rem;
-  transition: color 0.3s ease;
+  transition: border-bottom 0.3s ease, color 0.3s ease;
 }
 
 .nav-link-custom:hover {
    border-bottom:2px solid white ;
    
-   /* Soft yellow on hover */
 }
