--- a/client/src/components/HelpPage/HelpPage.css
+++ b/client/src/components/HelpPage/HelpPage.css
@@ -4,6 +4,7 @@
     padding: 20px;
     gap: 30px;
     align-items: center;
+   
 
 }
 .helpImg img {
@@ -23,7 +24,13 @@
   margin-bottom: 20px;
   border-radius: 15px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+.quardant > div:hover{
+  transform: scale(1.03);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); 
+  cursor: pointer;
+}  
 
 /* Color-coded borders for each quadrant */
 .impnoturg {
